##
## $Id$
##

SUBDIRS = \
  cat \
  borrow/pgplot \
  src/tools \
  src/subs \
  src/scripts \
  borrow/linpack \
  src/prog/analysis \
  src/prog/calib \
  src/prog/carma \
  src/prog/convert \
  src/prog/deconv \
  src/prog/disp \
  src/prog/map \
  src/prog/misc \
  src/prog/sma \
  src/prog/vis \
  src/prog/wsrt \
  src

EXTRA_DIST = mircommon.mak mirdoc.mak

## Not used??
##  src/prog/eor




# SUBDIRS = src
# SUBDIRS = src/inc
# SUBDIRS = src/prog

# SUBDIRS = src/prog/analysis
# SUBDIRS = src/prog/atnf
# SUBDIRS = src/prog/calib
# SUBDIRS = src/prog/carma
# SUBDIRS = src/prog/convert
# SUBDIRS = src/prog/deconv
# SUBDIRS = src/prog/disp
# SUBDIRS = src/prog/eor
# SUBDIRS = src/prog/map
# SUBDIRS = src/prog/misc
# SUBDIRS = src/prog/sma
# SUBDIRS = src/prog/sma/data
# SUBDIRS = src/prog/vis
# SUBDIRS = src/prog/wsrt
# SUBDIRS = src/scripts
# SUBDIRS = src/scripts/python
# SUBDIRS = src/spec
# SUBDIRS = src/spec/hcconv
# SUBDIRS = src/spec/imcalc
# SUBDIRS = src/spec/mosaic
# SUBDIRS = src/spec/uvhat
# SUBDIRS = src/spec/velplotc
# SUBDIRS = src/spec/xcorf
# SUBDIRS = src/spec/xmtv

# SUBDIRS = src/sys
# SUBDIRS = src/sys/bin
# SUBDIRS = src/sys/files
# SUBDIRS = src/sys/test
# SUBDIRS = src/tools

# ./borrow
# ./borrow/dtm
# ./borrow/dtm/examples
# ./borrow/dtm/libsrc
# ./borrow/dtm/man
# ./borrow/dtm/man/man3
# ./borrow/dtm/tutorial
# ./borrow/dtm/tutorial/documents
# ./borrow/dtm/tutorial/examples
# ./borrow/hdf
# ./borrow/linpack
# ./borrow/mxv
# ./borrow/pgplot
# ./borrow/pgplot/applications
# ./borrow/pgplot/applications/curvefit
# ./borrow/pgplot/applications/plot10
# ./borrow/pgplot/applications/plotpg
# ./borrow/pgplot/cpg
# ./borrow/pgplot/drivers
# ./borrow/pgplot/drivers/old
# ./borrow/pgplot/drivers/xathena
# ./borrow/pgplot/drivers/xmotif
# ./borrow/pgplot/drivers/xtk
# ./borrow/pgplot/examples
# ./borrow/pgplot/fonts
# ./borrow/pgplot/pgdispd
# ./borrow/pgplot/pgmf
# ./borrow/pgplot/src
# ./borrow/pgplot/sys
# ./borrow/pgplot/sys_aix
# ./borrow/pgplot/sys_alliant
# ./borrow/pgplot/sys_arc
# ./borrow/pgplot/sys_arc/F77
# ./borrow/pgplot/sys_bsd
# ./borrow/pgplot/sys_convex
# ./borrow/pgplot/sys_cray
# ./borrow/pgplot/sys_cygwin
# ./borrow/pgplot/sys_darwin
# ./borrow/pgplot/sys_dos
# ./borrow/pgplot/sys_epix2
# ./borrow/pgplot/sys_freebsd
# ./borrow/pgplot/sys_fujitsu
# ./borrow/pgplot/sys_gnuwin32
# ./borrow/pgplot/sys_hp
# ./borrow/pgplot/sys_irix
# ./borrow/pgplot/sys_linux
# ./borrow/pgplot/sys_linux/af77_src
# ./borrow/pgplot/sys_linux/f77_src
# ./borrow/pgplot/sys_linux/f95_src
# ./borrow/pgplot/sys_linux/nag_src
# ./borrow/pgplot/sys_mac
# ./borrow/pgplot/sys_msdos
# ./borrow/pgplot/sys_next
# ./borrow/pgplot/sys_next/af77_src
# ./borrow/pgplot/sys_next/f2c_src
# ./borrow/pgplot/sys_next/gf77_src
# ./borrow/pgplot/sys_next/pgview
# ./borrow/pgplot/sys_openstep
# ./borrow/pgplot/sys_openstep/f2c_src
# ./borrow/pgplot/sys_openstep/g77_src
# ./borrow/pgplot/sys_openstep/pgview
# ./borrow/pgplot/sys_osf1
# ./borrow/pgplot/sys_salford
# ./borrow/pgplot/sys_sol2
# ./borrow/pgplot/sys_solx86
# ./borrow/pgplot/sys_sun4
# ./borrow/pgplot/sys_ultrix
# ./borrow/pgplot/sys_vms
# ./borrow/pgplot/sys_win
# ./borrow/readline
# ./borrow/readline/doc
# ./borrow/readline/examples
# ./borrow/rpfits
# ./borrow/rpfits/code
# ./borrow/rpfits/code/alpha
# ./borrow/rpfits/code/darwin_ppc
# ./borrow/rpfits/code/linux
# ./borrow/rpfits/code/sgi
# ./borrow/rpfits/code/sun4
# ./borrow/rpfits/code/sun4sol
# ./borrow/rpfits/darwin_ppc
# ./borrow/rpfits/darwin_x86
# ./borrow/rpfits/doc
# ./borrow/rpfits/linux
# ./borrow/rpfits/linux64
# ./borrow/rpfits/sun4sol
# ./borrow/www
# ./borrow/www/All
# ./borrow/www/All/Implementation
# ./borrow/www/All/apollo_m68k
# ./borrow/www/All/aux
# ./borrow/www/All/decstation
# ./borrow/www/All/dell
# ./borrow/www/All/isc3.0
# ./borrow/www/All/linux
# ./borrow/www/All/ncr
# ./borrow/www/All/next
# ./borrow/www/All/next-386
# ./borrow/www/All/osf1
# ./borrow/www/All/pyramid
# ./borrow/www/All/rs6000
# ./borrow/www/All/sco
# ./borrow/www/All/sgi
# ./borrow/www/All/snake
# ./borrow/www/All/src
# ./borrow/www/All/sun3
# ./borrow/www/All/sun4
# ./borrow/www/All/sun4-sol2
# ./borrow/www/All/unisys
# ./borrow/www/All/unix
# ./borrow/www/All/uts2
# ./borrow/www/All/uts4
# ./borrow/www/All/vax_ultrix
# ./borrow/www/Library
# ./borrow/www/Library/Implementation
# ./borrow/www/Library/Implementation/vms
# ./borrow/xmrecvlist
# ./cat
# ./cat/palettes
# ./data
# ./demo
# ./demo/alma
# ./demo/alma/casc.vla
# ./demo/ata
# ./demo/ata/casc.vla
# ./demo/ata/sat1mm.modj2
# ./demo/carma
# ./demo/carma/casc.vla
# ./demo/carma/sat1mm.modj2
# ./examples
# ./examples/mosaic
# ./install
# ./install/tests
# ./manuals
# ./manuals/atnf-prog
# ./manuals/atnf-user
# ./manuals/carma
# ./manuals/carma-cook
# ./manuals/covers
# ./manuals/eguide
# ./manuals/gildas
# ./manuals/gildas/P4-14
# ./manuals/linpack
# ./manuals/pguide
# ./manuals/sguide
# ./manuals/uguide
